<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MyQuiz</string>
    <string name="reset">Reset</string>
    <string name="reset_success">Quiz answers erased!</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
    <string name="question1">New French president in 2017?</string>
    <string name="question1answer1">Sarkozy</string>
    <string name="question1answer2">Macron</string>
    <string name="question1answer3">Salvator Dalì</string>
    <string name="question2">Beginning year of WW2?</string>
    <string name="question2answer1">1939</string>
    <string name="question2answer2">1938</string>
    <string name="question2answer3">1945</string>
    <string name="question3">Was defeated in Waterloo</string>
    <string name="q3RightAnswer">napoleon</string>
    <string name="question4">Italian Cities?</string>
    <string name="question4answer1">Sofia</string>
    <string name="question4answer2">Pavia</string>
    <string name="question4answer3">Rome</string>
    <string name="success">Well done!</string>
    <string name="failure">Not quite accurate ;)</string>
    <string name="results">Points: <xliff:g example="0" id="points">%d</xliff:g> out of <xliff:g example="4" id="max_points">%d</xliff:g></string>
    <string name="share">Share</string>
    <string name="finalMessage">Thank you for completing this Quiz.\n\nShare your results with friends! <xliff:g example="0" id="result">%s</xliff:g></string>
    <string name="shareMessage">I completed the MyQuiz app quiz and got <xliff:g example="0" id="result">%s</xliff:g> out of <xliff:g example="4" id="max_points">%d</xliff:g> points! Challenge me if you dare ;) </string>
    <string name="doItAgain">Let\'s do it again!</string>
</resources>
